--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@
               </div>
               <hr>
               <h5>Local image file</h5>
-              <div class="input-group input-group-lg">
+              <div class="input-group input-group">
                 <input type="file" class="form-control" name="openfile" accept="image/*">
                 <button type="submit" class="btn btn-primary" ><i class="bi bi-file-plus"></i> insert</button>
               </div>
