--- a/index.html
+++ b/index.html
@@ -943,11 +943,19 @@
                   </select>
                 </div>
                 <div>
-                  <div class="form-label mb-0"><i class="bi bi-arrow-return-left"></i> whiteSpace(자동줄바꿈)</div>
+                  <div class="form-label mb-0"><i class="bi bi-arrow-return-left"></i> whiteSpace(공백처리,자동줄바꿈)</div>
                   <select name="whiteSpace" class="form-select">
-                    <!-- <option value="normal">normal (기본값)(이거 써야하나.. keep-all 이 좋을 듯)</option> -->
-                    <option value="break-spaces">break-spaces (최대한 자동 줄바꿈)</option>
-                    <option value="pre">pre (자동 줄바꿈 없음)</option>
+                    <optgroup label="추천">
+                      <option value="break-spaces">break-spaces (최대한 자동 줄바꿈)</option>
+                      <option value="pre">pre (자동 줄바꿈 없음)</option>
+                    </optgroup>
+                    <optgroup label="비추천">
+                      <option value="pre-wrap">pre-wrap (줄바꿈+자동줄바꿈+뒷공백유지)</option>
+                      <option value="pre-line">pre-line (줄바꿈+자동줄바꿈+공백압축)</option>
+                      <option value="nowrap">nowrap (줄바꿈금지+공백압축)</option>
+                      <option value="normal">normal (줄바꿈금지+공백압축+자동줄바꿈)</option>
+                    </optgroup>
+                    
                   </select>
                 </div>
                 <div>
