몇몇 설정  모달을 넓은 화면에서 오른쪽으로

--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
           </div>
           <div class="modal-body pb-0" style="flex:0 0 auto">
             <div class="d-flex flex-column gap-3">
-              <div class="d-flex justify-content-end gap-1">
+              <div class="d-flex justify-content-end flex-wrap gap-1">
                 <div class="btn-group" role="group">
                   <button type="button" class="btn btn-primary" title="add layer" onclick="editor?.document?.layers.addLayer();editor?.document?.layer.flush();"><i class="bi bi-file-plus"></i></button>
                   
