overflowWrap=='break-word' 버그 수정

--- a/test/element/test.TextLayer.html
+++ b/test/element/test.TextLayer.html
@@ -198,6 +198,54 @@
               >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
             </div>
           </div>
+
+          <div>
+            <div class="form-label">textConfig.whiteSpace = 'pre-wrap'</div>
+            <div>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
+              data-text-config='{"fontSize":"14px","overflowWrap":"break-word","wordBreak":"keep-all","whiteSpace":"pre-wrap","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
+              data-text-config='{"fontSize":"14px","overflowWrap":"break-word","wordBreak":"keep-all","whiteSpace":"pre-wrap","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+            </div>
+          </div>
+
+          <div>
+            <div class="form-label">textConfig.whiteSpace = 'pre-line'</div>
+            <div>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
+              data-text-config='{"fontSize":"14px","overflowWrap":"break-word","wordBreak":"keep-all","whiteSpace":"pre-line","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
+              data-text-config='{"fontSize":"14px","overflowWrap":"break-word","wordBreak":"keep-all","whiteSpace":"pre-line","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+            </div>
+          </div>
+
+          <div>
+            <div class="form-label">textConfig.whiteSpace = 'nowrap'</div>
+            <div>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
+              data-text-config='{"fontSize":"14px","overflowWrap":"break-word","wordBreak":"keep-all","whiteSpace":"nowrap","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
+              data-text-config='{"fontSize":"14px","overflowWrap":"break-word","wordBreak":"keep-all","whiteSpace":"nowrap","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+            </div>
+          </div>
+
+          <div>
+            <div class="form-label">textConfig.whiteSpace = 'normal'</div>
+            <div>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
+              data-text-config='{"fontSize":"14px","overflowWrap":"break-word","wordBreak":"keep-all","whiteSpace":"normal","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
+              data-text-config='{"fontSize":"14px","overflowWrap":"break-word","wordBreak":"keep-all","whiteSpace":"normal","padding":"4px"}'
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+            </div>
+          </div>
         </div>
 
 
