text 그리기 손보는 중

--- a/index.html
+++ b/index.html
@@ -780,15 +780,25 @@
                 xonblur="editor.document.history.save('text config')"
                 oninput="{
                   const textlayer = editor?.document?.layer
-                  textlayer.setText(this.text.value);
+                  textlayer.setText(document.querySelector('#text-frame-content').textContent);
                   textlayer.flush();
-                  Wc.HtmlUtil.applyStyleObject(document.querySelector('#form-text-text'),textlayer.textConfig.exportToStyleObject())
+                  // Wc.HtmlUtil.applyStyleObject(document.querySelector('#form-text-text'),textlayer.textConfig.exportToStyleObject())
+                  document.querySelector('#text-frame').style.padding = textlayer.textConfig.padding
+                  Wc.HtmlUtil.applyStyleObject(document.querySelector('#text-frame-content'),textlayer.textConfig.exportToStyleObject())
                 } return false;"
                 data-wc-sync-form="editor.document.layer"
               >
               <div>
                 <div class="form-text mb-0">Text</div>
-                <textarea id="form-text-text" name="text" rows="5" class="form-control" style="height: 200px;"></textarea>
+                <!-- <textarea id="form-text-text" name="text" rows="5" class="form-control" style="height: 200px;"></textarea> -->
+                 <div class="form-control mx-auto p-0" style="height: 200px;">
+                  <div class="text-frame" id="text-frame" style="overflow: auto;">
+                    <div class="text-frame-inner" style="contain: none;">
+                      <div class="content" id="text-frame-content" contenteditable="plaintext-only"></div>
+                    </div>
+                  </div>
+                </div>
+                
               </div>
             </form>
             <hr>
@@ -797,7 +807,8 @@
                   const textlayer = editor?.document?.layer
                   textlayer.setTextConfig(Wc.HtmlUtil.formToObject(this));
                   textlayer.flush();
-                  Wc.HtmlUtil.applyStyleObject(document.querySelector('#form-text-text'),textlayer.textConfig.exportToStyleObject())
+                  document.querySelector('#text-frame').style.padding = textlayer.textConfig.padding
+                  Wc.HtmlUtil.applyStyleObject(document.querySelector('#text-frame-content'),textlayer.textConfig.exportToStyleObject())
                 }              
               " 
               onchange="this.oninput(event);"
@@ -990,8 +1001,12 @@
     <script>
       document.getElementById('modal-text-config').addEventListener('show.bs.modal', event => {
         const textlayer = editor?.document?.layer
-        Wc.HtmlUtil.applyStyleObject(document.querySelector('#form-text-text'),textlayer.textConfig.exportToStyleObject())
-        // editor.ready();
+        // Wc.HtmlUtil.applyStyleObject(document.querySelector('#form-text-text'),textlayer.textConfig.exportToStyleObject())
+
+        document.querySelector('#text-frame-content').textContent = textlayer.text;
+        document.querySelector('#text-frame').style.padding = textlayer.textConfig.padding
+        Wc.HtmlUtil.applyStyleObject(document.querySelector('#text-frame-content'),textlayer.textConfig.exportToStyleObject())
+
       })
     </script>
 
