brush 관련 개편 중 - compositeOperation

--- a/index.html
+++ b/index.html
@@ -1584,7 +1584,38 @@
                   <div class="brush-nav-tab" data-brush-tab="config">
                     <div class="div-brush-config grid-auto-fill grid-auto-fill-260px gap-3">
                       <header> <h4 class="m-0">Basic shape (기본 모양)</h4> </header>
-
+                      <div>
+                        <div class="form-label mb-0"><i class="bi bi-arrows-collapse-vertical"></i> SacleX(너비 배율)</div>
+                        <!-- compositeOperation 는 tool에서 사용된다. -->
+                        <select name="compositeOperation" class="form-select">
+                          <option value="source-over">source-over</option>
+                          <option value="source-in">source-in</option>
+                          <option value="source-out">source-out</option>
+                          <option value="source-atop">source-atop</option>
+                          <option value="destination-over">destination-over</option>
+                          <option value="destination-in">destination-in</option>
+                          <option value="destination-out">destination-out</option>
+                          <option value="destination-atop">destination-atop</option>
+                          <option value="lighter">lighter</option>
+                          <option value="copy">copy</option>
+                          <option value="xor">xor</option>
+                          <option value="multiply">multiply</option>
+                          <option value="screen">screen</option>
+                          <option value="overlay">overlay</option>
+                          <option value="darken">darken</option>
+                          <option value="lighten">lighten</option>
+                          <option value="color-dodge">color-dodge</option>
+                          <option value="color-burn">color-burn</option>
+                          <option value="hard-light">hard-light</option>
+                          <option value="soft-light">soft-light</option>
+                          <option value="difference">difference</option>
+                          <option value="exclusion">exclusion</option>
+                          <option value="hue">hue</option>
+                          <option value="saturation">saturation</option>
+                          <option value="color">color</option>
+                          <option value="luminosity">luminosity</option>
+                        </select>
+                      </div>
 
                       <div>
                         <div class="form-label mb-0"><i class="bi bi-arrows-collapse-vertical"></i> SacleX(너비 배율)</div>
