brush  에서 eraser 분리

--- a/index.html
+++ b/index.html
@@ -1949,7 +1949,7 @@
           </div>
           <div class="modal-body brush-preview border-bottom p-0" style="flex:0 0 auto;">
             <div class="brush-wrap text-center d-none justify-content-center align-items-center mx-auto" style="height: 200px;">
-              <canvas id="eraser" data-brush-key="eraser" is="wc-brush" class="wc-brush" width="5" height="5"></canvas>
+              <canvas id="eraser" data-brush-key="eraser" is="wc-eraser" class="wc-brush wc-eraser" width="5" height="5"></canvas>
             </div>
             <div class="brush-wrap brush-preview-canvas-wrap text-center d-flex justify-content-center align-items-center mx-auto">
               <canvas class="brush-preview-canvas d-block mx-auto" is="wc-canvas" width="400" height="100"></canvas>
